--- a/serverless.yml
+++ b/serverless.yml
@@ -74,6 +74,20 @@ functions:
           path: call/delta/fangoost
           method: post
           cors: true
+  fangoostcalldelta:
+    handler: handler.fangoostcalltheta
+    events:
+      - http:
+          path: call/theta/fangoost
+          method: post
+          cors: true
+  fangoostcalldelta:
+    handler: handler.fangoostcallgamma
+    events:
+      - http:
+          path: call/gamma/fangoost
+          method: post
+          cors: true
   fangoostput:
     handler: handler.fangoostput
     events:
@@ -86,6 +100,20 @@ functions:
     events:
       - http:
           path: put/delta/fangoost
+          method: post
+          cors: true
+  fangoostputtheta:
+    handler: handler.fangoostputtheta
+    events:
+      - http:
+          path: put/theta/fangoost
+          method: post
+          cors: true
+  fangoostputgamma:
+    handler: handler.fangoostputgamma
+    events:
+      - http:
+          path: put/gamma/fangoost
           method: post
           cors: true
 
@@ -133,6 +161,34 @@ functions:
           path: call/delta/fsts
           method: post
           cors: true
+  fstsputtheta:
+    handler: handler.fstsputtheta
+    events:
+      - http:
+          path: put/theta/fsts
+          method: post
+          cors: true
+  fstscalltheta:
+    handler: handler.fstscalltheta
+    events:
+      - http:
+          path: call/theta/fsts
+          method: post
+          cors: true
+  fstsputgamma:
+    handler: handler.fstsputgamma
+    events:
+      - http:
+          path: put/gamma/fsts
+          method: post
+          cors: true
+  fstscallgamma:
+    handler: handler.fstscallgamma
+    events:
+      - http:
+          path: call/gamma/fsts
+          method: post
+          cors: true
   VaR:
     handler: handler.VaR
     events:
@@ -149,49 +205,3 @@ functions:
           cors: true
       
 
-
-
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
