--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ sudo: true
 
 matrix:
   include:
-    - os: linux
-      dist: trusty #xenial
-      env:
-         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
     - language: nodejs
       node_js:
       - "stable"
@@ -13,8 +9,13 @@ matrix:
         directories:
         - node_modules
       script:
+        - npm install
         - npm test -- --coverage
     - language: cpp
+      os: linux
+      dist: trusty #xenial
+      env:
+         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
       before_install:
         - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         - sudo apt-get -y update
