--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
-sudo: true
+sudo: required
 language: node_js
 node_js:
   - "stable"
-env:
-  - CXX=g++-7
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-7
-env:
-  - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+matrix:
+  include:
+    # works on Precise and Trusty
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 before_install:
   - eval "${MATRIX_EVAL}"
   - ./compileAndPackage.sh
