--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,16 @@ language: node_js
 node_js:
   - "stable"
 
-
-matrix:
-  include:
-    # works on Precise and Trusty
-    - os: linux
-      dist: trusty #xenial
-      env:
-         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-5
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get -y update
-  - sudo apt-get -y install gcc-5 g++-5
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5
   - g++ -v
-  - eval "${MATRIX_EVAL}"
+  - eval CC=gcc-5 && CXX=g++-5
   - ./compileAndPackage.sh
 script:
   - make test 
