added parallel and faster lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -205,6 +205,8 @@ functions:
           cors: true
   fullmodel:
     handler: handler.fullmodel
+    memorySize: 3008 # optional, in MB, default is 1024
+    timeout: 60 # optional, in seconds, default is 6
     events:
       - http:
           path: call/calibration/full
@@ -212,6 +214,8 @@ functions:
           cors: true
   hestonmodel:
     handler: handler.hestonmodel
+    memorySize: 3008 # optional, in MB, default is 1024
+    timeout: 60 # optional, in seconds, default is 6
     events:
       - http:
           path: call/calibration/heston
@@ -219,6 +223,8 @@ functions:
           cors: true
   bsmodel:
     handler: handler.bsmodel
+    memorySize: 3008 # optional, in MB, default is 1024
+    timeout: 60 # optional, in seconds, default is 6
     events:
       - http:
           path: call/calibration/bs
