--- a/serverless.yml
+++ b/serverless.yml
@@ -58,62 +58,63 @@ package:
   include:
    - bin/**
    - lambda/handler.js
-
+custom:
+  baseUrl: v1
 functions:
   fangoostcall:
     handler: lambda/handler.fangoostcall
     events:
       - http:
-          path: call/price/fangoost
+          path: ${self:custom.baseUrl}/call/price/fangoost
           method: post
           cors: true
   fangoostcalldelta:
     handler: lambda/handler.fangoostcalldelta
     events:
       - http:
-          path: call/delta/fangoost
+          path: ${self:custom.baseUrl}/call/delta/fangoost
           method: post
           cors: true
   fangoostcalltheta:
     handler: lambda/handler.fangoostcalltheta
     events:
       - http:
-          path: call/theta/fangoost
+          path: ${self:custom.baseUrl}/call/theta/fangoost
           method: post
           cors: true
   fangoostcallgamma:
     handler: lambda/handler.fangoostcallgamma
     events:
       - http:
-          path: call/gamma/fangoost
+          path: ${self:custom.baseUrl}/call/gamma/fangoost
           method: post
           cors: true
   fangoostput:
     handler: lambda/handler.fangoostput
     events:
       - http:
-          path: put/price/fangoost
+          path: ${self:custom.baseUrl}/put/price/fangoost
           method: post
           cors: true
   fangoostputdelta:
     handler: lambda/handler.fangoostputdelta
     events:
       - http:
-          path: put/delta/fangoost
+          path: ${self:custom.baseUrl}/put/delta/fangoost
           method: post
           cors: true
   fangoostputtheta:
     handler: lambda/handler.fangoostputtheta
     events:
       - http:
-          path: put/theta/fangoost
+          path: ${self:custom.baseUrl}/put/theta/fangoost
           method: post
           cors: true
   fangoostputgamma:
     handler: lambda/handler.fangoostputgamma
     events:
       - http:
-          path: put/gamma/fangoost
+          path: ${self:custom.baseUrl}/put/gamma/fangoost
           method: post
           cors: true
 
@@ -121,7 +122,7 @@ functions:
     handler: lambda/handler.carrmadanput
     events:
       - http:
-          path: put/price/carrmadan
+          path: ${self:custom.baseUrl}/put/price/carrmadan
           method: post
           cors: true
 
@@ -129,7 +130,7 @@ functions:
     handler: lambda/handler.carrmadancall
     events:
       - http:
-          path: call/price/carrmadan
+          path: ${self:custom.baseUrl}/call/price/carrmadan
           method: post
           cors: true
 
@@ -137,70 +138,70 @@ functions:
     handler: lambda/handler.fstsput
     events:
       - http:
-          path: put/price/fsts
+          path: ${self:custom.baseUrl}/put/price/fsts
           method: post
           cors: true
   fstscall:
     handler: lambda/handler.fstscall
     events:
       - http:
-          path: call/price/fsts
+          path: ${self:custom.baseUrl}/call/price/fsts
           method: post
           cors: true
   fstsputdelta:
     handler: lambda/handler.fstsputdelta
     events:
       - http:
-          path: put/delta/fsts
+          path: ${self:custom.baseUrl}/put/delta/fsts
           method: post
           cors: true
   fstscalldelta:
     handler: lambda/handler.fstscalldelta
     events:
       - http:
-          path: call/delta/fsts
+          path: ${self:custom.baseUrl}/call/delta/fsts
           method: post
           cors: true
   fstsputtheta:
     handler: lambda/handler.fstsputtheta
     events:
       - http:
-          path: put/theta/fsts
+          path: ${self:custom.baseUrl}/put/theta/fsts
           method: post
           cors: true
   fstscalltheta:
     handler: lambda/handler.fstscalltheta
     events:
       - http:
-          path: call/theta/fsts
+          path: ${self:custom.baseUrl}/call/theta/fsts
           method: post
           cors: true
   fstsputgamma:
     handler: lambda/handler.fstsputgamma
     events:
       - http:
-          path: put/gamma/fsts
+          path: ${self:custom.baseUrl}/put/gamma/fsts
           method: post
           cors: true
   fstscallgamma:
     handler: lambda/handler.fstscallgamma
     events:
       - http:
-          path: call/gamma/fsts
+          path: ${self:custom.baseUrl}/call/gamma/fsts
           method: post
           cors: true
   VaR:
     handler: lambda/handler.VaR
     events:
       - http:
-          path: density/var
+          path: ${self:custom.baseUrl}/density/var
           method: post
           cors: true
   density:
     handler: lambda/handler.density
     events:
       - http:
-          path: density/raw
+          path: ${self:custom.baseUrl}/density/raw
           method: post
           cors: true
   fullmodel:
@@ -209,7 +210,7 @@ functions:
     timeout: 60 # optional, in seconds, default is 6
     events:
       - http:
-          path: call/calibration
+          path: ${self:custom.baseUrl}/call/calibration
           method: post
           cors: true
       
