--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,8 @@ before_deploy:
 - node ./scripts/mergeYml
 - cd releases
 - cat serverless.yml
-- ls
-- cd v1 
-- ls
+- sls deploy --force
 - cd ..
-- serverless deploy -v
 
 deploy:
   provider: releases
