--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "es6-promisify": "^6.0.0",
     "fs-extra": "^5.0.0",
     "js-yaml": "^3.11.0",
+    "npm": "^6.0.0",
     "request": "^2.85.0",
     "unzip": "^0.1.11"
   }
