--- a/serverless.yml
+++ b/serverless.yml
@@ -56,8 +56,12 @@ provider:
 
 package:
   include:
+  
    - bin/**
    - lambda/handler.js
+  exclude:
+    - node_modules/**
+    - '!node_modules/middy/**'
 
 functions:
   calculator:
