--- a/serverless.yml
+++ b/serverless.yml
@@ -68,6 +68,12 @@ functions:
           path: version/calculator/{optionType}/{sensitivity}/{algorithm?}
           method: post
           cors: true
+          request:
+            parameters:
+              paths:
+                optionType: true
+                sensitivity: true
+                algorithm: false
   calibrator:
     memorySize: 3008 # optional, in MB, default is 1024
     timeout: 30 # optional, in seconds, default is 6
