Added some verbosity

--- a/src/makefile
+++ b/src/makefile
@@ -16,7 +16,7 @@ calculator.o: calculator.cpp parse_json.h get_cf.h
 calibrator:calibrator.o
 	$(GCCVAL) -std=c++17 -O3  -pthread calibrator.o $(INCLUDES) -o calibrator -fopenmp -static-libstdc++
 calibrator.o: calibrator.cpp parse_json.h get_cf.h
-	$(GCCVAL) -std=c++17 -O3  -pthread -c calibrator.cpp  $(INCLUDES) -fopenmp
+	$(GCCVAL) -std=c++17 -O3 -D VERBOSE_FLAG=1  -pthread -c calibrator.cpp  $(INCLUDES) -fopenmp
 
 defaultParameters:defaultParameters.o
 	$(GCCVAL) -std=c++14 -O3  -pthread defaultParameters.o $(INCLUDES) -o defaultParameters -fopenmp -static-libstdc++
