--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lambda functions for Jump Diffusion process",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "test": "tests"
   },
   "scripts": {
     "test": "jest",
