--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "csvtojson": "^1.1.9",
+    "cubic-spline": "^1.0.4",
     "es6-promisify": "^6.0.0",
     "fs-extra": "^5.0.0",
     "js-yaml": "^3.11.0",
